# libnss-rs

./: .gitignore  Cargo.toml  README.md  install_hardcoded.sh
example-hardcoded/: Cargo.toml
example-hardcoded-user/: Cargo.toml
example-hardcoded/src/: lib.rs
libnss/: Cargo.toml
libnss-rs/: Cargo.toml
libnss/src/: group.rs  host.rs  hostname.rs  initgroups.rs  interop.rs  lib.rs  passwd.rs  shadow.rs
